--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,22 @@
-# Miscellaneous
+########################################
+# Project-wide .gitignore (Flutter + Rust)
+# Generated: consolidated & expanded for multi-platform setup
+########################################
+
+########################################
+# General build & miscellaneous
+########################################
 *.class
 *.log
 *.pyc
 *.swp
+*.tmp
+*.temp
+*.orig
 .DS_Store
+Thumbs.db
+Desktop.ini
+$RECYCLE.BIN/
 .atom/
 .build/
 .buildlog/
@@ -11,35 +24,180 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
+tmp/
 
-# IntelliJ related
+########################################
+# IDE / Editor
+########################################
+# IntelliJ / Android Studio
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# VS Code (keep if you want shared settings; uncomment to ignore)
+# .vscode/
+.vscode/settings.local.json
 
-# Flutter/Dart/Pub related
+########################################
+# Flutter / Dart
+########################################
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
 .flutter-plugins-dependencies
+.metadata
+.packages
 .pub-cache/
 .pub/
 /build/
+**/build/
 /coverage/
+coverage/
+lcov.info
 
-# Symbolication related
+# Generated registrants & ephemeral engine bits
+**/GeneratedPluginRegistrant.*
+**/ephemeral/
+
+########################################
+# Rust / Cargo
+########################################
+target/
+**/target/
+**/*.rs.bk
+
+# (Keep Cargo.lock for apps; remove ignore if present elsewhere)
+
+########################################
+# Native / C / C++ / FFI build artifacts
+########################################
+*.o
+*.so
+*.a
+*.dll
+*.dylib
+*.lib
+*.exe
+*.obj
+*.pdb
+*.ilk
+*.exp
+*.iobj
+*.ipdb
+*.pch
+
+########################################
+# CMake
+########################################
+CMakeCache.txt
+CMakeFiles/
+CMakeScripts/
+Testing/
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+cmake-build-*/
+
+########################################
+# Android / Gradle
+########################################
+.gradle/
+**/.gradle/
+**/local.properties
+local.properties
+captures/
+**/captures/
+android/app/debug/
+android/app/profile/
+android/app/release/
+*.jks
+*.keystore
+key.properties
+
+########################################
+# iOS / Xcode / macOS
+########################################
+DerivedData/
+**/DerivedData/
+*.xcuserstate
+*.xcworkspace/xcuserdata/
+**/xcuserdata/
+*.moved-aside
+*.xcuserdatad
+*.dSYM
+
+########################################
+# Windows specific artifacts
+########################################
+*.pdb
+*.manifest
+*.rsp
+
+########################################
+# Web (Flutter web build in build/ already ignored)
+########################################
+.dart_tool/chrome-device/
+
+########################################
+# Symbolication / Obfuscation outputs
+########################################
 app.*.symbols
-
-# Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+########################################
+# Security / Credentials / Environment
+########################################
+*.pem
+*.crt
+*.cer
+*.der
+*.p12
+*.pfx
+*.env
+.env.*
+.envrc
+key.properties
+
+########################################
+# Package managers (future tooling)
+########################################
+node_modules/
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+########################################
+# Generated native assets (Flutter native assets build dir)
+########################################
+**/native_assets/
+
+########################################
+# Databases / stateful runtime files
+########################################
+*.sqlite
+*.db
+*.db-wal
+*.db-shm
+
+########################################
+# Tooling / Melos / Monorepo helpers
+########################################
+.melos_tool/
+
+########################################
+# Crash dumps
+########################################
+*.dmp
+
+########################################
+# Keep: lock files that ensure reproducible builds
+#   - pubspec.lock (for apps; commit)
+#   - Cargo.lock   (for Rust crates/apps; commit)
+# Remove any ignore rules that hide them.
+########################################
+
+# End of consolidated .gitignore
