--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,11 +4,24 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "staticlib"]
+crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
-flutter_rust_bridge = "=2.11.1"
-once_cell = "1.20.0"
+anyhow = "1.0.100"
+axum = { version = "0.8.6", features = ["macros", "ws"] }
+flutter_rust_bridge = "2.11.1"
+once_cell = "1.21.3"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+thiserror = "2.0.17"
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
+uuid = { version = "1.18.1", features = ["serde", "v4"] }
+
+[[bin]]
+name = "signaling_server"
+path = "src/bin/signaling_server.rs"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
