--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -14,10 +14,17 @@ once_cell = "1.21.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 thiserror = "2.0.17"
-tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
+tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
 uuid = { version = "1.18.1", features = ["serde", "v4"] }
+redis = { version = "0.32.7", features = ["tokio-comp"] }
+argon2 = "0.5.3"
+password-hash = "0.5.0"
+rand = "0.8.5"
+rand_core = "0.6.4"
+base64 = { version = "0.22.1", features = ["alloc"] }
+hex = "0.4.3"
 
 [[bin]]
 name = "signaling_server"
