--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -25,6 +25,8 @@ password-hash = "0.5.0"
 rand = "0.8.5"
 base64 = { version = "0.22.1", features = ["alloc"] }
 hex = "0.4.3"
+dotenvy = "0.15.7"
+aes-gcm = { version = "0.10.3", features = ["aes"] }
 
 [[bin]]
 name = "signaling_server"
