--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -27,6 +27,7 @@ base64 = { version = "0.22.1", features = ["alloc"] }
 hex = "0.4.3"
 dotenvy = "0.15.7"
 aes-gcm = { version = "0.10.3", features = ["aes"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 
 [[bin]]
 name = "signaling_server"
