--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
     path: rust_builder
   flutter_rust_bridge: 2.11.1
   http: ^1.2.0
+  qr_flutter: ^4.1.0
+  share_plus: ^10.1.3
 
 dev_dependencies:
   flutter_test:
