--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,26 +8,28 @@ crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0.100"
-axum = { version = "0.8.6", features = ["macros", "ws"] }
-flutter_rust_bridge = "2.11.1"
+axum = { version = "0.8.8", features = ["macros", "ws"] }
+flutter_rust_bridge = "=2.11.1"
 once_cell = "1.21.3"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
+serde_json = "1.0.149"
 thiserror = "2.0.17"
-tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
-uuid = { version = "1.18.1", features = ["serde", "v4"] }
-redis = { version = "0.32.7", features = ["tokio-comp"] }
+tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
+uuid = { version = "1.19.0", features = ["serde", "v4"] }
+redis = { version = "1.0.2", features = ["tokio-comp"] }
 argon2 = "0.5.3"
 password-hash = "0.5.0"
 # Align with password-hash (uses rand_core 0.6). rand 0.8 depends on rand_core 0.6.
-rand = "0.8.5"
+rand = "0.9.2"
 base64 = { version = "0.22.1", features = ["alloc"] }
 hex = "0.4.3"
 dotenvy = "0.15.7"
 aes-gcm = { version = "0.10.3", features = ["aes"] }
-reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+sha2 = "0.10.9"
+hmac = "0.12.1"
 
 [[bin]]
 name = "signaling_server"
