--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.0
   qr_flutter: ^4.1.0
   share_plus: ^10.1.3
+  flutter_webrtc: ^0.11.7
 
 dev_dependencies:
   flutter_test:
