--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   qr_flutter: ^4.1.0
   share_plus: ^10.1.3
   flutter_webrtc: ^0.11.7
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
