--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["lib", "cdylib", "staticlib"]
 anyhow = "1.0.100"
 axum = { version = "0.8.8", features = ["macros", "ws"] }
 flutter_rust_bridge = "=2.11.1"
+futures-util = "0.3"
 once_cell = "1.21.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
