--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["lib", "cdylib", "staticlib"]
 
 [dependencies]
 anyhow = "1.0.100"
-axum = { version = "0.8.8", features = ["macros", "ws"] }
+axum = { version = "0.7.5", features = ["macros", "ws"] }
 flutter_rust_bridge = "=2.11.1"
 futures-util = "0.3"
 once_cell = "1.21.3"
@@ -19,7 +19,7 @@ tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
 uuid = { version = "1.19.0", features = ["serde", "v4"] }
-redis = { version = "1.0.2", features = ["tokio-comp"] }
+redis = { version = "1.0.2", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
 argon2 = "0.5.3"
 password-hash = "0.5.0"
 # Align with password-hash (uses rand_core 0.6). rand 0.8 depends on rand_core 0.6.
@@ -28,9 +28,11 @@ base64 = { version = "0.22.1", features = ["alloc"] }
 hex = "0.4.3"
 dotenvy = "0.15.7"
 aes-gcm = { version = "0.10.3", features = ["aes"] }
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 sha2 = "0.10.9"
 hmac = "0.12.1"
+tower = { version = "0.5", features = ["util"] }
+tower_governor = "0.4"
 
 [[bin]]
 name = "signaling_server"
