--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   share_plus: ^12.0.1
   flutter_webrtc: ^1.2.1
   web_socket_channel: ^3.0.3
+  path_provider: ^2.1.5
+  file_picker: ^10.3.8
+  crypto: ^3.0.7
+  file_selector: ^1.1.0
+  desktop_drop: ^0.7.0
 
 dev_dependencies:
   flutter_test:
