--- a/client/rust_builder/android/build.gradle
+++ b/client/rust_builder/android/build.gradle
@@ -51,6 +51,6 @@ android {
 
 apply from: "../cargokit/gradle/plugin.gradle"
 cargokit {
-    manifestDir = "../../../rust"
+    manifestDir = "../../../rust/crates/mobile-bridge"
     libname = "rust_lib_application"
 }
