--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.0
   qr_flutter: ^4.1.0
   share_plus: ^12.0.1
+  logging: ^1.3.0
   flutter_webrtc: ^1.2.1
   web_socket_channel: ^3.0.3
   path_provider: ^2.1.5
