Added integrity checks and timeout handling for data transfer

--- a/.gitignore
+++ b/.gitignore
@@ -64,7 +64,7 @@ tunnel.log
 # Security / Credentials
 ########################################
 .env
-GEMINI.md
+AGENTS.md
 *.pem
 *.keystore
 *.jks
