--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -74,7 +74,8 @@ jobs:
         run: flutter precache --windows
 
       - name: Install flutter_rust_bridge_codegen
-        run: dart pub global activate flutter_rust_bridge_codegen 2.11.1
+        run: |
+          dart pub global activate --source git https://github.com/fzyzcjy/flutter_rust_bridge.git --git-ref v2.11.1 --path frb_codegen
 
       - name: Add Dart pub bin to PATH
         run: |
