--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Install flutter_rust_bridge_codegen
         run: |
-          dart pub global activate --source git https://github.com/fzyzcjy/flutter_rust_bridge.git --git-ref v2.11.1 --path frb_codegen
+          dart pub global activate --source git https://github.com/fzyzcjy/flutter_rust_bridge.git --git-ref v2.11.1 --git-path frb_codegen
 
       - name: Add Dart pub bin to PATH
         run: |
